--- a/main.html
+++ b/main.html
@@ -10,7 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<p class="demo">This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases</p>
+	<div class="demo">
+		<p>This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases</p>
+	</div>
+	
 
 </body>
 
